objects/ConnectedApp_Sandbox__c.object
<CustomObject>
    <fields>
        <fullName>Consumer_Key__c</fullName>
        <label>Consumer Key</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <required>true</required>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Consumer_Secret__c</fullName>
        <label>Consumer Secret</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <required>true</required>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>IsProduction__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if is production instance</inlineHelpText>
        <label>IsProduction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>100</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <required>true</required>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <label>UserName</label>
        <length>100</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <required>true</required>
        <type>EncryptedText</type>
    </fields>
    <label>ConnectedApp Sandbox</label>
    <nameField>
        <label>ConnectedApp Sandbox Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ConnectedApp Sandboxes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>